added bike distance tracker

--- a/RPICommunicator_V1/app/src/main/res/layout/activity_main.xml
+++ b/RPICommunicator_V1/app/src/main/res/layout/activity_main.xml
@@ -114,6 +114,14 @@
                             android:textSize="@dimen/text_size"
                             app:backgroundTint="@color/red" />
                     </LinearLayout>
+                    <Button
+                        android:id="@+id/bikeActivity"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:background="@drawable/custom_button_yellow"
+                        android:text="Fahrrad Fahrt hinzufügen"
+                        android:textSize="@dimen/text_size"/>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
