--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,9 +11,13 @@
     <LinearLayout
         android:id="@+id/scroll_main"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:clipToPadding="false"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:layout_constraintBottom_toTopOf="@+id/button_settingsActivity"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:id="@+id/wrapper_layout"
@@ -28,11 +32,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
+                android:layout_marginTop="48dp"
                 android:layout_marginRight="8dp"
                 android:backgroundTint="@color/white"
                 app:cardCornerRadius="8dp"
                 card_view:cardElevation="5sp">
-
 
 
                 <LinearLayout
@@ -40,32 +44,7 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                    <Button
-                        android:id="@+id/button_bikeActivity"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:background="@drawable/custom_button_yellow"
-                        android:text="Fahrrad Fahrt hinzufügen"
-                        android:textSize="@dimen/text_size"
-                        />
 
-                    <Button
-                        android:id="@+id/button_settingsActivity"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:background="@drawable/custom_button_yellow"
-                        android:text="Einstellungen"
-                        android:textSize="@dimen/text_size" />
-                    <Button
-                        android:id="@+id/button_plantoverviewActivity"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:background="@drawable/custom_button_yellow"
-                        android:text="Pflanzen"
-                        android:textSize="@dimen/text_size" />
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -269,8 +248,8 @@
                         android:layout_marginTop="8dp"
                         android:layout_marginRight="8dp"
                         android:background="@drawable/custom_button_yellow"
+                        android:drawableLeft="@android:drawable/arrow_up_float"
                         android:text="Songtitel"
-
                         android:textSize="@dimen/text_size" />
 
 
@@ -286,8 +265,44 @@
             </androidx.cardview.widget.CardView>
 
 
+            <Button
+                android:id="@+id/button_bikeActivity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginRight="16dp"
+                android:background="@drawable/custom_button_green"
+                android:text="Fahrrad Fahrt hinzufügen"
+                app:backgroundTint="@color/teal_700"
+                android:textSize="@dimen/text_size" />
+
+
+            <Button
+                android:id="@+id/button_plantoverviewActivity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="16dp"
+                android:background="@drawable/custom_button_green"
+                android:text="Pflanzen"
+                app:backgroundTint="@color/teal_700"
+                android:textSize="@dimen/text_size" />
+
 
         </LinearLayout>
     </LinearLayout>
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/button_settingsActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="16dp"
+        android:layout_weight="1"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+
+        app:layout_constraintRight_toRightOf="parent"
+        app:srcCompat="@drawable/gearicon" />
+</androidx.constraintlayout.widget.ConstraintLayout>
