--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:id="@+id/scroll_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:clipToPadding="false"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintBottom_toTopOf="@+id/button_settingsActivity"
@@ -24,6 +25,81 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_outlets"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginRight="8dp"
+                android:backgroundTint="@color/white"
+                app:cardCornerRadius="4dp"
+                app:cardElevation="5sp">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingTop="8dp"
+                    android:paddingBottom="8dp">
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/custom_button_green"
+                        android:backgroundTint="@color/light_yellow_palette"
+                        android:orientation="horizontal"
+                        android:padding="2dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/imageoutlet2"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintWidth_percent="0.3">
+
+                        <ImageView
+                            android:id="@+id/imageoutlet1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:adjustViewBounds="true"
+                            android:src="@drawable/icon_outlet" />
+                    </LinearLayout>
+
+                    <ImageView
+                        android:id="@+id/imageoutlet2"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/icon_outlet"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintWidth_percent="0.3" />
+
+                    <ImageView
+                        android:id="@+id/imageoutlet3"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/icon_outlet"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/imageoutlet2"
+                        app:layout_constraintWidth_percent="0.3" />
+                    <!-- <ImageView
+                         android:id="@+id/imageoutlet2"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:src="@drawable/icon_outlet"
+                         android:layout_weight="5"/>
+                     <ImageView
+                         android:id="@+id/imageoutlet3"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:src="@drawable/icon_outlet"
+                         android:layout_weight="5"/>-->
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
 
 
             <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -307,8 +383,8 @@
                 android:layout_marginRight="16dp"
                 android:background="@drawable/custom_button_green"
                 android:text="Fahrrad Fahrt hinzufügen"
-                app:backgroundTint="@color/teal_700"
-                android:textSize="@dimen/text_size" />
+                android:textSize="@dimen/text_size"
+                app:backgroundTint="@color/teal_700" />
 
 
             <Button
@@ -320,8 +396,8 @@
                 android:layout_marginRight="16dp"
                 android:background="@drawable/custom_button_green"
                 android:text="Pflanzen"
-                app:backgroundTint="@color/teal_700"
-                android:textSize="@dimen/text_size" />
+                android:textSize="@dimen/text_size"
+                app:backgroundTint="@color/teal_700" />
 
 
         </LinearLayout>
