--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
                 android:layout_marginTop="32dp"
                 android:layout_marginRight="8dp"
                 android:backgroundTint="@color/white"
-                app:cardCornerRadius="4dp"
+                app:cardCornerRadius="8dp"
                 app:cardElevation="5sp">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -45,12 +45,14 @@
                     android:paddingBottom="8dp">
 
                     <LinearLayout
+                        android:id="@+id/imageoutlet1"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:background="@drawable/custom_button_green"
-                        android:backgroundTint="@color/light_yellow_palette"
+                        android:backgroundTint="@color/beige_palette"
                         android:orientation="horizontal"
                         android:padding="2dp"
+
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/imageoutlet2"
                         app:layout_constraintStart_toStartOf="parent"
@@ -58,46 +60,55 @@
                         app:layout_constraintWidth_percent="0.3">
 
                         <ImageView
-                            android:id="@+id/imageoutlet1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:adjustViewBounds="true"
-                            android:src="@drawable/icon_outlet" />
+                            android:src="@drawable/icon_outlet"  android:contentDescription="outlet1"/>
                     </LinearLayout>
 
-                    <ImageView
+                    <LinearLayout
                         android:id="@+id/imageoutlet2"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/icon_outlet"
+                        android:background="@drawable/custom_button_green"
+                        android:backgroundTint="@color/beige_palette"
+                        android:orientation="horizontal"
+                        android:padding="2dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintWidth_percent="0.3" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintWidth_percent="0.3">
 
-                    <ImageView
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:adjustViewBounds="true"
+                            android:src="@drawable/icon_outlet"
+                            android:contentDescription="outlet2" />
+                    </LinearLayout>
+
+                    <LinearLayout
                         android:id="@+id/imageoutlet3"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/icon_outlet"
+                        android:background="@drawable/custom_button_green"
+                        android:backgroundTint="@color/beige_palette"
+                        android:orientation="horizontal"
+                        android:padding="2dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/imageoutlet2"
-                        app:layout_constraintWidth_percent="0.3" />
-                    <!-- <ImageView
-                         android:id="@+id/imageoutlet2"
-                         android:layout_width="wrap_content"
-                         android:layout_height="wrap_content"
-                         android:src="@drawable/icon_outlet"
-                         android:layout_weight="5"/>
-                     <ImageView
-                         android:id="@+id/imageoutlet3"
-                         android:layout_width="wrap_content"
-                         android:layout_height="wrap_content"
-                         android:src="@drawable/icon_outlet"
-                         android:layout_weight="5"/>-->
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintWidth_percent="0.3">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:adjustViewBounds="true"
+                            android:src="@drawable/icon_outlet"  android:contentDescription="outlet3"/>
+                    </LinearLayout>
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
