--- a/app/src/main/res/layout/activity_plant_view.xml
+++ b/app/src/main/res/layout/activity_plant_view.xml
@@ -11,8 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/darker_gray"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        >
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
@@ -34,15 +33,15 @@
                 app:cardCornerRadius="8dp"
                 card_view:cardElevation="5sp">
 
-            <ImageView
-                android:id="@+id/header_image"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:contentDescription="@string/app_name"
-                android:fitsSystemWindows="true"
-                app:layout_collapseMode="parallax"
-                app:srcCompat="@drawable/icon_plant" />
+                <ImageView
+                    android:id="@+id/header_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:contentDescription="@string/app_name"
+                    android:fitsSystemWindows="true"
+                    app:layout_collapseMode="parallax"
+                    app:srcCompat="@drawable/icon_plant" />
             </androidx.cardview.widget.CardView>
 
 
@@ -80,38 +79,39 @@
                     style="bold"
                     android:layout_width="match_parent"
                     android:layout_height="64dp"
+                    android:layout_marginBottom="16dp"
                     android:text="Pflanze"
                     android:textColor="@android:color/black"
-                    android:layout_marginBottom="16dp"
                     app:autoSizeMaxTextSize="64sp"
                     app:autoSizeMinTextSize="20sp"
-                    app:autoSizeTextType="uniform"/>
+                    app:autoSizeTextType="uniform" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="Feuchtigkeitsstand:"
                     android:layout_marginBottom="4dp"
+                    android:text="Feuchtigkeitsstand:"
                     android:textColor="@android:color/darker_gray"
                     android:textSize="24sp"
                     android:textStyle="bold" />
+
                 <TextView
                     android:id="@+id/humidityTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="trocken"
+                    android:layout_marginStart="8dp"
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp"
-                    android:layout_marginStart="8dp"
                     android:layout_marginBottom="16dp"
+                    android:text="trocken"
                     android:textColor="@color/light_grey"
-                    android:textSize="15sp"/>
+                    android:textSize="15sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="Beschreibung:"
                     android:layout_marginBottom="4dp"
+                    android:text="Beschreibung:"
                     android:textColor="@android:color/darker_gray"
                     android:textSize="24sp"
                     android:textStyle="bold" />
@@ -120,11 +120,11 @@
                     android:id="@+id/infoTextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="---"
-                    android:layout_marginBottom="4dp"
+                    android:layout_marginStart="8dp"
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginBottom="4dp"
+                    android:text="---"
                     android:textColor="@color/light_grey"
                     android:textSize="15sp" />
 
@@ -132,19 +132,19 @@
                     android:id="@+id/usedPump"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Pumpe: 1"
-                    android:textColor="@color/light_grey"
-                    android:textSize="15sp"
-                    android:layout_marginBottom="16dp"
+                    android:layout_marginStart="8dp"
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp"
-                    android:layout_marginStart="8dp"/>
+                    android:layout_marginBottom="16dp"
+                    android:text="Pumpe: 1"
+                    android:textColor="@color/light_grey"
+                    android:textSize="15sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="Letztes Mal gegossen:"
                     android:layout_marginBottom="4dp"
+                    android:text="Letztes Mal gegossen:"
                     android:textColor="@android:color/darker_gray"
                     android:textSize="24sp"
                     android:textStyle="bold" />
@@ -153,40 +153,40 @@
                     android:id="@+id/wateredTextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/light_grey"
-                    android:text="Letztes Mal gegossen:"
-                    android:textSize="15sp"
+                    android:layout_marginStart="8dp"
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginBottom="16dp"/>
+                    android:layout_marginBottom="16dp"
+                    android:text="Letztes Mal gegossen:"
+                    android:textColor="@color/light_grey"
+                    android:textSize="15sp" />
 
                 <TextView
                     android:id="@+id/will_be_watered"
                     style="bold"
                     android:layout_width="match_parent"
                     android:layout_height="32dp"
-                    android:textAlignment="center"
                     android:layout_gravity="center"
-                    android:layout_marginRight="8dp"
                     android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
                     android:maxLines="1"
                     android:text="WIRD GEGOSSEN"
+                    android:textAlignment="center"
                     android:textColor="@color/light_green_old"
+                    android:visibility="invisible"
                     app:autoSizeMaxTextSize="48sp"
                     app:autoSizeMinTextSize="20sp"
-                    app:autoSizeTextType="uniform"
-                    android:visibility="invisible"/>
+                    app:autoSizeTextType="uniform" />
 
                 <Button
                     android:id="@+id/water_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
+                    android:background="@drawable/custom_rectangle_rounded_corners"
+                    android:backgroundTint="@color/dark_yellow"
                     android:text="Gießen"
-                    android:background="@drawable/custom_button_yellow"
-                    android:textSize="20sp"
-                    />
+                    android:textSize="20sp" />
 
                 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     android:layout_width="match_parent"
@@ -195,8 +195,7 @@
                     <com.github.mikephil.charting.charts.LineChart
                         android:id="@+id/chart"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        />
+                        android:layout_height="match_parent" />
 
                 </RelativeLayout>
             </LinearLayout>
