--- a/app/src/main/res/layout/plant_item.xml
+++ b/app/src/main/res/layout/plant_item.xml
@@ -86,14 +86,14 @@
             android:id="@+id/delete_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/custom_button_red"
-            app:backgroundTint="@color/red"
-            android:text="Löschen"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
+            android:background="@drawable/custom_rectangle_rounded_corners"
+            android:backgroundTint="@color/red"
+            android:text="Löschen"
             android:textSize="@dimen/text_size"
-            android:visibility="gone"/>
+            android:visibility="gone" />
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
